# bf-aws-snapshot

./: README.md  aws_data_getter.py  awshelper.py  pyproject.toml  setup.py
bf_aws_snapshot/: __init__.py  aws_data_getter.py
